# Logging

./: CMakeLists.txt  FormatItem.cpp  FormatItem.hpp  Formatter.cpp  Formatter.hpp  Level.hpp  LogSink.cpp  LogSink.hpp  Message.hpp  README.md  SinkFactory.hpp  Util.hpp  main.cpp
example/: main.cpp
include/: AsyncLogger.hpp  LogSink.hpp  Logger.hpp  Message.hpp  Util.hpp
src/: FormatItem.cpp  Formatter.cpp  LogSink.cpp
